--- a/web.config
+++ b/web.config
@@ -10,3 +10,5 @@
   </location>
 </configuration>
 <!--ProjectGuid: F3241BA1-490C-4C66-B058-E2575AEF6CEA-->
+<!--ProjectGuid: F3241BA1-490C-4C66-B058-E2575A-->
+
