--- a/web.config
+++ b/web.config
@@ -9,6 +9,6 @@
     </system.webServer>
   </location>
 </configuration>
-<!--ProjectGuid: F3241BA1-490C-4C66-B058-E2575AEF6CEA-->
+<!--ProjectGuid: F3gggggggggggggggggggg241BA1-490C-4C66-B058-E2575AEF6CEA-->
 <!--ProjectGuid: F3241BA1-490C-4C66-B058-E2575A-->
 #remote add
