--- a/web.config
+++ b/web.config
@@ -12,3 +12,5 @@
 <!--ProjectGuid: F3241BA1-490C-4C66-B058-E2575AEF6CEA-->
 <!--ProjectGuid: F3241BA1-490C-4C66-B058-E2575A-->
 #remote add
+
+	#adding from lcoal
